HOTFIX :: Fix the size of HomeHeader Image from being too big

--- a/src/components/HomeHeader/styles.scss
+++ b/src/components/HomeHeader/styles.scss
@@ -14,8 +14,8 @@ div#HomeHeader {
       @extend .__centered;
       border: 3px solid $white-text;
       border-radius: 50%;
-      max-width: 80vw;
-      min-width: 40vw;
+      max-width: 75vw;
+      min-width: 30vw;
     }
 
     &__name {
